# pkg-rust-port

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION.md  MISSION.md  POST_PORT_TODO.md  README.md  RESOURCES.md  STATUS.md  YAO_PKG_PARITY.md  package.json
.github/workflows/: ci.yml  gated-runtime.yml  release.yml
benches/: packaging.rs
docs/: gated-validation.md
lessons/: 0001-reviewing-native-npm-cli-releases.html
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
reference/: npm-native-cli-release-checklist.html
scripts/: check-npm-package.js  check-npm-version.js
src/: cli.rs  common.rs  compress.rs  config.rs  detect.rs  dictionary.rs  error.rs  esm.rs  fabricate.rs  fetch.rs  fsx.rs  lib.rs  macho.rs  main.rs  pack.rs  package.rs  prelude.rs  prelude_assets.rs  produce.rs  refine.rs  resolve.rs  sea.rs  sea_inject.rs  target.rs  walk.rs
test/: PROVENANCE.md  dictionary-modules.txt
test/test-80-compression/: .gitignore  package.json
test/test-99-#1861/: index.js  package.json
tests/: cli_plan_parity.rs  cli_smoke.rs  common_parity.rs  config_parity.rs  detect_parity.rs  dictionary_parity.rs  fetch_parity.rs  fsx_parity.rs  pack_parity.rs  package_build_parity.rs  prelude_parity.rs  produce_parity.rs  real_pkg_compare.rs  refine_parity.rs  resolve_parity.rs  runtime_smoke.rs  sea_parity.rs  skeleton.rs  target_parity.rs  walk_parity.rs
