[package]
name = "pkg-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of pkg: package Node.js projects into executable artifacts"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.8"
brotli = "8.0.2"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1.9"
jiff = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.11.0"
swc_common = "21.0.2"
swc_ecma_ast = "23.0.1"
swc_ecma_parser = "39.1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = "0.7"
insta = "1.0"
proptest = "1.0"

[lib]
name = "pkg_rust"
path = "src/lib.rs"

[[bin]]
name = "pkg"
path = "src/main.rs"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
strip = "symbols"
